--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css">
+  <!-- CSS only -->
   <title>Lift-simulation</title>
 </head>
 
@@ -16,9 +17,9 @@
       Lift-simulation
     </h1>
     <form name="myForm" onsubmit="return false" action="" method="get">
-      <label for="inputLift">Enter number of floors  <input type="number" class="inputFloor" name="inputFloor" value="" /></label>
+      <label for="inputLift"  >Enter number of floors  <input type="number" class="inputFloor" name="inputFloor" value="" /></label>
       <br />
-      <label for="inputLift">Enter number of lifts <input type="number"  class="inputLift" name="inputLift" value="" /></label>
+      <label for="inputLift" >Enter number of lifts <input type="number"  class="inputLift" name="inputLift" value="" /></label>
       <br />
       <button type="submit" class="submit-button" onClick="createSection(this.form)">Submit</button>
     </form>
